[tool.poetry]
name = "myleetcodeproblemsolved"
version = "0.1.0"
description = ""
authors = ["Feraclin <feraclin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
